Link CSS stylesheet to main HTML page

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
   <head>
     <meta charset="UTF-8">
     <title>Landing Page</title>
-    <link rel="stylesheet" href="#">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    
+
   </body>
 </html>
 
 
-<!-- Font suggestion: Roboto.
-- Add link to CSS after I finish boilerplate. 
-- Edit `README.md` with brief introduction describing what the current project is and what skills you will have demonstrated once you have completed it. (You can also do this as a self-reflection at the end of the project, which is a good way to review what you have learned.). Also image credits.
+<!-- 
+- Change font to Roboto
+- Add link to CSS 
+- Edit `README.md` with description of project + skills + image credits.
 -->
