Change main page font to Roboto

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 <!-- 
+  TODO:
 - Change font to Roboto
-- Add link to CSS 
 - Edit `README.md` with description of project + skills + image credits.
 -->
