--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -6,13 +6,32 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-
+    <div class="hero">
+      <div class="header">
+        <div>Header Logo</div>
+        <ul>
+          <li>header link one</li>
+          <li>header link two</li>
+          <li>header link three</li>
+        </ul>
+      </div>
+      <div class="main-blue">
+        <div>This website is awesome</div>
+        <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <button>Sign up</button>
+        <div>This is a placeholder for an image</div>
+      </div>
+    </div>
   </body>
 </html>
 
 
 <!-- 
   TODO:
-- Change font to Roboto
-- Edit `README.md` with description of project + skills + image credits.
+  - Start top blue section
+  - Start middle white section
+  - Start middle gray section
+  - Start bottom white section
+  - Start footer
+  - Edit `README.md` with description of project + skills + image credits.
 -->
