Add styling to header and hero text

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="hero">
       <div class="header">
-        <div>Header Logo</div>
+        <div class="logo">Header Logo</div>
         <ul>
           <li>header link one</li>
           <li>header link two</li>
@@ -16,10 +16,10 @@
         </ul>
       </div>
       <div class="main-blue">
-        <div>This website is awesome</div>
-        <div>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <div class="hero-text1">This website is awesome</div>
+        <div class="hero-text2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
         <button>Sign up</button>
-        <div>This is a placeholder for an image</div>
+        <div class="placeholder">This is a placeholder for an image</div>
       </div>
     </div>
   </body>
@@ -28,7 +28,7 @@
 
 <!-- 
   TODO:
-  - Start top blue section
+  - Style top blue section
   - Start middle white section
   - Start middle gray section
   - Start bottom white section
