--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
         </ul>
       </div>
       <div class="main-blue">
-        <div class="hero-text1">This website is awesome</div>
-        <div class="hero-text2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-        <button>Sign up</button>
+        <div class="main-left">
+          <div class="hero-text1">This website is awesome</div>
+          <div class="hero-text2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+          <button>Sign up</button>
+        </div>
         <div class="placeholder">This is a placeholder for an image</div>
       </div>
     </div>
