Add padding to top of  hero section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <!-- 
   TODO:
-  - Style top blue section
+  - Arrange top blue section to match full design"
   - Start middle white section
   - Start middle gray section
   - Start bottom white section
