--- a/index.html
+++ b/index.html
@@ -24,6 +24,25 @@
         <div class="placeholder">This is a placeholder for an image</div>
       </div>
     </div>
+    <div class="white">
+      <div>Some random information.</div>
+      <div class="img-text">
+        <div class="blank-box"></div>
+        <div>this is some subtext under an illustration or an image</div>
+      </div>
+      <div class="img-text">
+        <div class="blank-box"></div>
+        <div>this is some subtext under an illustration or an image</div>
+      </div>
+      <div class="img-text">
+        <div class="blank-box"></div>
+        <div>this is some subtext under an illustration or an image</div>
+      </div>
+      <div class="img-text">
+        <div class="blank-box"></div>
+        <div>this is some subtext under an illustration or an image</div>
+      </div>
+    </div>
   </body>
 </html>
 
