Style information header text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="white">
-      <div>Some random information.</div>
+      <div class="information-header">Some random information.</div>
       <div class="img-text">
         <div class="blank-box"></div>
         <div>this is some subtext under an illustration or an image</div>
