--- a/index.html
+++ b/index.html
@@ -26,21 +26,23 @@
     </div>
     <div class="white">
       <div class="information-header">Some random information.</div>
-      <div class="img-text">
-        <div class="blank-box"></div>
-        <div>this is some subtext under an illustration or an image</div>
-      </div>
-      <div class="img-text">
-        <div class="blank-box"></div>
-        <div>this is some subtext under an illustration or an image</div>
-      </div>
-      <div class="img-text">
-        <div class="blank-box"></div>
-        <div>this is some subtext under an illustration or an image</div>
-      </div>
-      <div class="img-text">
-        <div class="blank-box"></div>
-        <div>this is some subtext under an illustration or an image</div>
+      <div class="information">
+        <div class="img-text">
+          <div class="blank-box"></div>
+          <div>this is some subtext under an illustration or an image</div>
+        </div>
+        <div class="img-text">
+          <div class="blank-box"></div>
+          <div>this is some subtext under an illustration or an image</div>
+        </div>
+        <div class="img-text">
+          <div class="blank-box"></div>
+          <div>this is some subtext under an illustration or an image</div>
+        </div>
+        <div class="img-text">
+          <div class="blank-box"></div>
+          <div>this is some subtext under an illustration or an image</div>
+        </div>
       </div>
     </div>
   </body>
