Added quote to page

--- a/index.html
+++ b/index.html
@@ -45,13 +45,17 @@
         </div>
       </div>
     </div>
+    <div class="gray">
+      <div class=quote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+      </div>
+      <div class=reference>- Thor, God of Thunder</div>
+    </div>
   </body>
 </html>
 
 
 <!-- 
   TODO:
-  - Start middle white section
   - Start middle gray section
   - Start bottom white section
   - Start footer
