--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
       </div>
       <div class=reference>- Thor, God of Thunder</div>
     </div>
+    <div class="bottom-white">
+      <div class="call1">Call to action! It's time!</div>
+      <div class="call2">Sign up for our product by clicking that button right over there!</div>
+      <button>Sign up</button>
+    </div>
   </body>
 </html>
 
