Make call to action section blue

--- a/index.html
+++ b/index.html
@@ -51,9 +51,11 @@
       <div class=reference>- Thor, God of Thunder</div>
     </div>
     <div class="bottom-white">
-      <div class="call1">Call to action! It's time!</div>
-      <div class="call2">Sign up for our product by clicking that button right over there!</div>
-      <button>Sign up</button>
+      <div class="call0">
+        <div class="call1">Call to action! It's time!</div>
+        <div class="call2">Sign up for our product by clicking that button right over there!</div>
+        <button>Sign up</button>
+      </div>
     </div>
   </body>
 </html>
@@ -61,8 +63,7 @@
 
 <!-- 
   TODO:
-  - Start middle gray section
-  - Start bottom white section
+  - Style call to action
   - Start footer
   - Edit `README.md` with description of project + skills + image credits.
 -->
