--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
     </div>
     <div class="bottom-white">
       <div class="call0">
-        <div class="call1">Call to action! It's time!</div>
-        <div class="call2">Sign up for our product by clicking that button right over there!</div>
+        <div class="call-text">
+          <div class="call1">Call to action! It's time!</div>
+          <div class="call2">Sign up for our product by clicking that button right over there!</div>
+        </div>
         <button>Sign up</button>
       </div>
     </div>
