Style call to action

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="main-left">
           <div class="hero-text1">This website is awesome</div>
           <div class="hero-text2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-          <button>Sign up</button>
+          <button class="blue">Sign up</button>
         </div>
         <div class="placeholder">This is a placeholder for an image</div>
       </div>
@@ -51,12 +51,12 @@
       <div class=reference>- Thor, God of Thunder</div>
     </div>
     <div class="bottom-white">
-      <div class="call0">
+      <div class="call0 blue">
         <div class="call-text">
           <div class="call1">Call to action! It's time!</div>
           <div class="call2">Sign up for our product by clicking that button right over there!</div>
         </div>
-        <button>Sign up</button>
+        <button class="blue" id="border">Sign up</button>
       </div>
     </div>
   </body>
@@ -67,5 +67,6 @@
   TODO:
   - Style call to action
   - Start footer
+  - Restructure top blue section into flex columns instead of flex rows.
   - Edit `README.md` with description of project + skills + image credits.
 -->
