--- a/index.html
+++ b/index.html
@@ -59,14 +59,15 @@
         <button class="blue" id="border">Sign up</button>
       </div>
     </div>
+    <div>Copyright @ The Odin Project 2022</div>
   </body>
 </html>
 
 
 <!-- 
   TODO:
-  - Style call to action
   - Start footer
   - Restructure top blue section into flex columns instead of flex rows.
+  - Restructure quote section
   - Edit `README.md` with description of project + skills + image credits.
 -->
