--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="hero">
+    <div class="hero dark-color">
       <div class="header">
         <div class="logo">Header Logo</div>
         <ul>
@@ -59,14 +59,13 @@
         <button class="blue" id="border">Sign up</button>
       </div>
     </div>
-    <div>Copyright @ The Odin Project 2022</div>
+    <div class="dark-color footer">Copyright © The Odin Project 2022</div>
   </body>
 </html>
 
 
 <!-- 
   TODO:
-  - Start footer
   - Restructure top blue section into flex columns instead of flex rows.
   - Restructure quote section
   - Edit `README.md` with description of project + skills + image credits.
