--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Landing Page</title>
     <link rel="stylesheet" href="style.css">
   </head>
-  <body>
+  <body class="page">
     <div class="hero dark-color">
       <div class="header">
         <div class="logo">Header Logo</div>
