refactor: rename 'logo' class to 'header__logo'

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body class="page page--font">
     <div class="hero dark-color">
       <div class="header">
-        <div class="logo">Header Logo</div>
+        <div class="header__logo">Header Logo</div>
         <ul>
           <li>header link one</li>
           <li>header link two</li>
