refactor: add class 'header__links'

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="hero dark-color">
       <div class="header">
         <div class="header__logo">Header Logo</div>
-        <ul>
+        <ul class="header__links">
           <li>header link one</li>
           <li>header link two</li>
           <li>header link three</li>
