refactor: rename class 'hero-text1' to 'hero__heading'

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <div class="main-blue">
         <div class="main-left">
-          <div class="hero-text1">This website is awesome</div>
+          <div class="hero__heading">This website is awesome</div>
           <div class="hero-text2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
           <button class="blue">Sign up</button>
         </div>
