--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="main-blue">
         <div class="main-left">
           <div class="hero__heading">This website is awesome</div>
-          <div class="hero-text2">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+          <div class="hero__content">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
           <button class="blue">Sign up</button>
         </div>
         <div class="placeholder">This is a placeholder for an image</div>
