--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div class="hero__content">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
           <button class="hero__button">Sign up</button>
         </div>
-        <div class="placeholder">This is a placeholder for an image</div>
+        <div class="hero__image">This is a placeholder for an image</div>
       </div>
     </div>
     <div class="white">
