--- a/index.html
+++ b/index.html
@@ -15,14 +15,12 @@
           <li>header link three</li>
         </ul>
       </div>
-      <div class="main-blue">
-        <div class="main-left">
-          <div class="hero__heading">This website is awesome</div>
-          <div class="hero__content">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-          <button class="hero__button">Sign up</button>
-        </div>
-        <div class="hero__image">This is a placeholder for an image</div>
+      <div class="main-left">
+        <div class="hero__heading">This website is awesome</div>
+        <div class="hero__content">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+        <button class="hero__button">Sign up</button>
       </div>
+      <div class="hero__image">This is a placeholder for an image</div>
     </div>
     <div class="white">
       <div class="information-header">Some random information.</div>
@@ -56,7 +54,7 @@
           <div class="call1">Call to action! It's time!</div>
           <div class="call2">Sign up for our product by clicking that button right over there!</div>
         </div>
-        <button class="blue" id="border">Sign up</button>
+        <button id="border">Sign up</button>
       </div>
     </div>
     <div class="dark-color footer">Copyright © The Odin Project 2022</div>
