refactor: rename class that controls color of dark blue sections of page

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="page">
-    <div class="hero dark-color">
+    <div class="section section--dark-blue">
       <div class="header">
         <div class="header__logo">Header Logo</div>
         <ul class="header__links">
