--- a/index.html
+++ b/index.html
@@ -15,10 +15,14 @@
           <li>header link three</li>
         </ul>
       </div>
-      <div class="hero__heading">This website is awesome</div>
-      <div class="hero__content">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
-      <button class="hero__button">Sign up</button>
-      <div class="hero__image">This is a placeholder for an image</div>
+      <div class="hero">
+        <div class="hero__container">
+          <div class="hero__heading">This website is awesome</div>
+          <div class="hero__content">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</div>
+          <button class="hero__button">Sign up</button>
+        </div>
+        <div class="hero__image">This is a placeholder for an image</div>
+      </div>
     </div>
     <div class="white">
       <div class="information-header">Some random information.</div>
