refactor: remove unused class from HTML

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="page">
+
+<!-- blue section of page below -->
+
     <div class="section section--dark-blue">
       <div class="header">
         <div class="header__logo">Header Logo</div>
@@ -24,6 +27,9 @@
         <div class="hero__image">This is a placeholder for an image</div>
       </div>
     </div>
+
+<!-- white section of page below -->
+
     <div class="white">
       <div class="information-header">Some random information.</div>
       <div class="information">
@@ -59,6 +65,6 @@
         <button id="border">Sign up</button>
       </div>
     </div>
-    <div class="dark-color footer">Copyright © The Odin Project 2022</div>
+    <div class="footer">Copyright © The Odin Project 2022</div>
   </body>
 </html>
