style: apply style to button in call to action

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="call1">Call to action! It's time!</div>
           <div class="call2">Sign up for our product by clicking that button right over there!</div>
         </div>
-        <button id="border">Sign up</button>
+        <button class="button" class="button__white-border">Sign up</button>
       </div>
     </div>
     <div class="footer">Copyright © The Odin Project 2022</div>
