--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       </div>
     </div>
 
-<!-- white section of page below -->
+<!-- information section of page below -->
 
-    <div class="white">
+    <div class="information">
       <div class="information-header">Some random information.</div>
       <div class="information">
         <div class="img-text">
@@ -51,6 +51,8 @@
         </div>
       </div>
     </div>
+
+<!-- gray section of page below -->
     <div class="gray">
       <div class=quote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
       </div>
