refactor: class 'information-heaader' renamed to 'information__header'

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <!-- information section of page below -->
 
     <div class="information">
-      <div class="information-header">Some random information.</div>
+      <div class="information__header">Some random information.</div>
       <div class="information">
         <div class="img-text">
           <div class="blank-box"></div>
