refactor: rename flex container in informational section of page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <div class="information">
       <div class="information__header">Some random information.</div>
-      <div class="information">
+      <div class="information__flex">
         <div class="img-text">
           <div class="blank-box"></div>
           <div>this is some subtext under an illustration or an image</div>
