style: align content in information section of page

--- a/index.html
+++ b/index.html
@@ -33,21 +33,21 @@
     <div class="information">
       <div class="information__header">Some random information.</div>
       <div class="information__flex">
-        <div class="img-text">
-          <div class="blank-box"></div>
-          <div>this is some subtext under an illustration or an image</div>
+        <div class="information__flex information__flex--column">
+          <div class="information__image"></div>
+          <div class="information__cap">this is some subtext under an illustration or an image</div>
         </div>
-        <div class="img-text">
-          <div class="blank-box"></div>
-          <div>this is some subtext under an illustration or an image</div>
+        <div class="information__flex information__flex--column">
+          <div class="information__image"></div>
+          <div class="information__cap">this is some subtext under an illustration or an image</div>
         </div>
-        <div class="img-text">
-          <div class="blank-box"></div>
-          <div>this is some subtext under an illustration or an image</div>
+        <div class="information__flex information__flex--column">
+          <div class="information__image"></div>
+          <div class="information__cap">this is some subtext under an illustration or an image</div>
         </div>
-        <div class="img-text">
-          <div class="blank-box"></div>
-          <div>this is some subtext under an illustration or an image</div>
+        <div class="information__flex information__flex--column">
+          <div class="information__image"></div>
+          <div class="information__cap">this is some subtext under an illustration or an image</div>
         </div>
       </div>
     </div>
