--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
       </div>
     </div>
 
-<!-- gray section of page below -->
-    <div class="gray">
-      <div class=quote>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
+<!-- quote below -->
+    <div class="quote">
+      <div class="quote__text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.
       </div>
-      <div class=reference>- Thor, God of Thunder</div>
+      <div class="quote__name">- Thor, God of Thunder</div>
     </div>
+
+<!-- call to action below -->
     <div class="bottom-white">
       <div class="call0 blue">
         <div class="call-text">
