--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div>
 
 <!-- call to action below -->
-    <div class="bottom-white">
+    <div class="section">
       <div class="call0 blue">
         <div class="call-text">
           <div class="call1">Call to action! It's time!</div>
