--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
 <!-- call to action below -->
     <div class="section">
-      <div class="call0 blue">
+      <div class="call-to-action">
         <div class="call-text">
           <div class="call1">Call to action! It's time!</div>
           <div class="call2">Sign up for our product by clicking that button right over there!</div>
