--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <div class="call-to-action__heading">Call to action! It's time!</div>
           <div class="call-to-action__text">Sign up for our product by clicking that button right over there!</div>
         </div>
-        <button class="button" class="button--white-border">Sign up</button>
+        <button class="button button--white-border">Sign up</button>
       </div>
     </div>
 
