refactor: break HTML and CSS into sections

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
     </div>
 
 <!-- call to action below -->
+
     <div class="bottom-white">
       <div class="call0 blue">
         <div class="call-text">
@@ -69,6 +70,9 @@
         <button class="button" class="button__white-border">Sign up</button>
       </div>
     </div>
+
+<!-- Footer below -->
+
     <div class="footer">Copyright © The Odin Project 2022</div>
   </body>
 </html>
